Add homepage basics

--- a/portfolio/src/app/homepage/homepage.component.html
+++ b/portfolio/src/app/homepage/homepage.component.html
@@ -1,1 +1,15 @@
-<p>homepage works!</p>
+<table>
+    <tr>
+        <table>
+            <tr>
+                <td><h2 style="color:darkblue">Welcome!</h2></td>
+            </tr>
+            <tr>
+                <td>Insert Image</td>
+                <td>
+                    <p>Welcome to my Portfolio, feel free to poke around.</p>
+                </td>
+            </tr>
+        </table>
+    </tr>
+</table>
