Add Pic to homepage

--- a/portfolio/src/app/homepage/homepage.component.html
+++ b/portfolio/src/app/homepage/homepage.component.html
@@ -5,7 +5,7 @@
                 <td><h2 style="color:darkblue">Welcome!</h2></td>
             </tr>
             <tr>
-                <td>Insert Image</td>
+                <td><img src="../../assets/skydive_pic.jpg"></td>
                 <td>
                     <p>Welcome to my Portfolio, feel free to poke around.</p>
                 </td>
